--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,8 @@
 [superuser]
-qqnumber=ÄãµÄqqºÅ
+qqnumber=qq number
 
 [database]
-dbname="dbname=pupubird user=robirt host=127.0.0.1 password=robirt sslmode=disable"
+dbname="dbname=databasename user=username host=127.0.0.1 password=password sslmode=disable"
+
+[robirt]
+cdtime=27
